--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,10 @@ jobs:
           go-version: 1.22
 
       - name: go fmt
-        run: |
-          go fmt ./...
+        run: go fmt ./...
+
+      - name: go vet
+        run: go vet -v  ./...
 
       - name: go test
-        run: |
-          go test -v ./...
+        run: go test -v ./...
